# asgs_gui

./: .gitignore  README.md  asgs_gui.def  asgsg  build  build.sh  fast_install  launch.sh  launch_gui  pyproject.toml  rhel_login
.github/workflows/: main.yml
asgs_ipc_handler/: README.md  asgs_server.sh  asgsh-remote
modfile/: 0.1.0
opt/libexec/: asgs_server.sh
src/asgs_gui/: __init__.py  __main__.py  _base_old.py  asgs_widgets.py
src/asgs_gui/asgs/: __init__.py  env_var.py  handlers.py  handlers_temp.py  production_system.py  widgets.py
src/asgs_gui/base/: _base.py  base_types.py  handlers.py  var.py
